Additional changes to styles.css -- cover div now displays above all other divs (assuming that no z-index exceeds 1000). Background image also no longer repeats.

--- a/trunk/trunk/css/styles.css
+++ b/trunk/trunk/css/styles.css
@@ -81,5 +81,7 @@ img {
 }
 
 .cover {
-	background-image:url('../img/cardBack.png');
+	background:url('../img/cardBack.png');
+	background-repeat:no-repeat;
+	z-index:1000;
 }
